second commit betterment

--- a/index.html
+++ b/index.html
@@ -8,50 +8,50 @@
 </head>
 <body>
   
-  <div class="grid grid-cols-4 border-2 p-[10px] ml-[100px] mr-[100px]">
-    <div class="h-[200px] w-[180px] border-2 hover:shadow-lg ">
+  <div class="grid grid-cols-4 p-[10px] ml-[100px] mr-[100px]">
+    <div class="h-[200px]  mt-[20px] mb-[20px] w-[180px]  hover:shadow-lg shadow-black hover:rounded-[10px] ">
       <img class="h-[100px] w-[200px] object-contain text-cente mb-[20px]" src="../pics/download.jpg" alt="">
       <h2 class="text-[16px] text-center">Redmi A5 (4GB+64GB)</h2>
       <p class="text-red-500 text-center">Rs. 22,999</p>
     </div>
     <!-- 2 -->
-      <div class="h-[200px] w-[180px] border-2">
+      <div class="h-[200px] mt-[20px]  mb-[20px] w-[180px] hover:shadow-lg shadow-black hover:rounded-[10px] ">
       <img class="h-[100px] w-[200px] object-contain text-center  mb-[20px]" src="../pics/download.jpg" alt="">
       <h2 class="text-[16px] text-center">Redmi A5 (4GB+64GB)</h2>
       <p class="text-red-500 text-center">Rs. 22,999</p>
     </div>
     <!-- 3 -->
-     <div class="h-[200px] w-[180px] border-2">
+     <div class="h-[200px] mt-[20px]  mb-[20px] w-[180px] hover:shadow-lg shadow-black hover:rounded-[10px] ">
       <img class="h-[100px] w-[200px] object-contain text-center  mb-[20px]" src="../pics/download.jpg" alt="">
       <h2 class="text-[16px] text-center">Redmi A5 (4GB+64GB)</h2>
       <p class="text-red-500 text-center">Rs. 22,999</p>
     </div>
     <!-- 4 -->
-     <div class="h-[200px] w-[180px] border-2">
+     <div class="h-[200px] mt-[20px]  mb-[20px] w-[180px] hover:shadow-lg shadow-black hover:rounded-[10px]">
       <img class="h-[100px] w-[200px] object-contain text-center  mb-[20px]" src="../pics/download.jpg" alt="">
       <h2 class="text-[16px] text-center">Redmi A5 (4GB+64GB)</h2>
       <p class="text-red-500 text-center">Rs. 22,999</p>
     </div>
     <!-- 5 -->
-      <div class="h-[200px] w-[180px] border-2">
+      <div class="h-[200px] mt-[20px]  mb-[20px] w-[180px] hover:shadow-lg shadow-black hover:rounded-[10px]">
       <img class="h-[100px] w-[200px] object-contain text-center  mb-[20px]" src="../pics/download.jpg" alt="">
       <h2 class="text-[16px] text-center">Redmi A5 (4GB+64GB)</h2>
       <p class="text-red-500 text-center">Rs. 22,999</p>
     </div>
     <!-- 6 -->
-          <div class="h-[200px] w-[180px] border-2">
+          <div class="h-[200px] mt-[20px]  mb-[20px] w-[180px] hover:shadow-lg shadow-black hover:rounded-[10px]">
       <img class="h-[100px] w-[200px] object-contain text-center  mb-[20px]" src="../pics/download.jpg" alt="">
       <h2 class="text-[16px] text-center">Redmi A5 (4GB+64GB)</h2>
       <p class="text-red-500 text-center">Rs. 22,999</p>
     </div>
     <!-- 7 -->
-      <div class="h-[200px] w-[180px] border-2">
+      <div class="h-[200px] mt-[20px]  mb-[20px] w-[180px] hover:shadow-lg shadow-black hover:rounded-[10px]">
       <img class="h-[100px] w-[200px] object-contain text-center  mb-[20px]" src="../pics/download.jpg" alt="">
       <h2 class="text-[16px] text-center">Redmi A5 (4GB+64GB)</h2>
       <p class="text-red-500 text-center">Rs. 22,999</p>
     </div>
     <!-- 8 -->
-      <div class="h-[200px] w-[180px] border-2">
+      <div class="h-[200px] mt-[20px]  mb-[20px] w-[180px] hover:shadow-lg shadow-black hover:rounded-[10px]">
       <img class="h-[100px] w-[200px] object-contain text-center  mb-[20px]" src="../pics/download.jpg" alt="">
       <h2 class="text-[16px] text-center">Redmi A5 (4GB+64GB)</h2>
       <p class="text-red-500 text-center">Rs. 22,999</p>
